--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,4 +7,12 @@ services:
       WEBSERVER_PORT: 5000
     ports:
       - 5000:5000
-    
+
+  python-api-onnx:
+    build:
+      dockerfile: ./python-api-onnx/Dockerfile
+      context: .
+    environment:
+      WEBSERVER_PORT: 5000
+    ports:
+      - 5001:5000
