--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,3 +16,14 @@ services:
       WEBSERVER_PORT: 5000
     ports:
       - 5001:5000
+
+  go-api-onnx:
+    build:
+      dockerfile: ./go-api-onnx/build/Dockerfile
+      context: .
+    environment:
+      WEBSERVER_PORT: 5000
+      SHARED_LIB_PATH: /go-api-onnx/onnxruntime-linux-x64-1.20.1/lib/libonnxruntime.so
+      MODEL_PATH_ONNX: /models/logistic_regression_iris.onnx
+    ports:
+      - 5002:5000
