--- a/modeling/requirements.txt
+++ b/modeling/requirements.txt
@@ -1,9 +1,12 @@
 asttokens==3.0.0
+coloredlogs==15.0.1
 comm==0.2.2
 debugpy==1.8.12
 decorator==5.1.1
 exceptiongroup==1.2.2
 executing==2.2.0
+flatbuffers==25.2.10
+humanfriendly==10.0
 ipykernel==6.29.5
 ipython==8.32.0
 jedi==0.19.2
@@ -11,10 +14,12 @@ joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 matplotlib-inline==0.1.7
+mpmath==1.3.0
 nest-asyncio==1.6.0
 numpy==2.2.2
 onnx==1.17.0
 onnxconverter-common==1.14.0
+onnxruntime==1.20.1
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -34,6 +39,7 @@ scipy==1.15.1
 six==1.17.0
 skl2onnx==1.18.0
 stack-data==0.6.3
+sympy==1.13.3
 threadpoolctl==3.5.0
 tornado==6.4.2
 traitlets==5.14.3
