--- a/python-api-pkl/requirements.txt
+++ b/python-api-pkl/requirements.txt
@@ -1,18 +1,43 @@
 annotated-types==0.7.0
 anyio==4.8.0
+asgiref==3.8.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
+Deprecated==1.2.18
 exceptiongroup==1.2.2
 fastapi==0.115.8
+googleapis-common-protos==1.67.0
+grpcio==1.70.0
 h11==0.14.0
 idna==3.10
+importlib_metadata==8.5.0
 joblib==1.4.2
 numpy==2.2.3
+opentelemetry-api==1.30.0
+opentelemetry-exporter-otlp==1.30.0
+opentelemetry-exporter-otlp-proto-common==1.30.0
+opentelemetry-exporter-otlp-proto-grpc==1.30.0
+opentelemetry-exporter-otlp-proto-http==1.30.0
+opentelemetry-instrumentation==0.51b0
+opentelemetry-instrumentation-asgi==0.51b0
+opentelemetry-instrumentation-fastapi==0.51b0
+opentelemetry-proto==1.30.0
+opentelemetry-sdk==1.30.0
+opentelemetry-semantic-conventions==0.51b0
+opentelemetry-util-http==0.51b0
+packaging==24.2
+protobuf==5.29.3
 pydantic==2.10.6
 pydantic_core==2.27.2
+requests==2.32.3
 scikit-learn==1.6.1
 scipy==1.15.1
 sniffio==1.3.1
 starlette==0.45.3
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
+wrapt==1.17.2
+zipp==3.21.0
